objects/Totem__mdt/Totem__mdt.object-meta.xml
<CustomObject>
    <label>Totem</label>
    <pluralLabel>Totems</pluralLabel>
</CustomObject>