objects/Totem__mdt/fields/Advantages__c.field-meta.xml
<CustomField>
    <fullName>Advantages__c</fullName>
    <label>Advantages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>