objects/Totem__mdt/fields/Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Characteristics__c</fullName>
    <label>Characteristics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>