objects/Totem__mdt/fields/Disadvantages__c.field-meta.xml
<CustomField>
    <fullName>Disadvantages__c</fullName>
    <label>Disadvantages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>