objects/Totem__mdt/fields/Favored_EnvIronment__c.field-meta.xml
<CustomField>
    <fullName>Favored_EnvIronment__c</fullName>
    <label>Favored EnvIronment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>