objects/Totem__mdt/fields/Spell_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Spell_Bonus__c</fullName>
    <label>Spell Bonus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>